@@ -23,11 +23,11 @@
 # *
 # Configuration file for GNU GLOBAL source code tag system.
 #
-# GLOBAL doesn't need 'global.conf' because it has the default values in it.
-# But if you have this file as '/etc/global.conf' or "$HOME/.globalrc"
+# GLOBAL doesn't need 'gtags.conf' because it has the default values in it.
+# But if you have this file as '/etc/gtags.conf' or "$HOME/.globalrc"
 # then GLOBAL system overwrite default values with the values from the file.
 #
-# 'global.conf' is termcap style file.
+# 'gtags.conf' is termcap style file.
 # 'default' is default target.
 # You can specify target with GTAGSLABEL environment variable.
 #
